@@ -1,8 +1,17 @@
-$NetBSD: distinfo,v 1.5 2007/11/07 17:34:18 jonb Exp $
+$NetBSD: distinfo,v 1.6 2008/05/28 14:06:31 jonb Exp $
 
-SHA1 (sbcl-1.0.11-source.tar.bz2) = 2592f818d2a9796ce04a85da1f2b08d23c20a9f5
-RMD160 (sbcl-1.0.11-source.tar.bz2) = d875fecc7104b3d205043428ae8af40eaedb4b16
-Size (sbcl-1.0.11-source.tar.bz2) = 3161728 bytes
+SHA1 (sbcl-1.0.16-source.tar.bz2) = 81b05d25b2478e2bdee5d2885d2318612d09b6fd
+RMD160 (sbcl-1.0.16-source.tar.bz2) = 64082b1c1885ce5d31636ccc7a65bfd9334072f9
+Size (sbcl-1.0.16-source.tar.bz2) = 3213890 bytes
+SHA1 (sbcl-NetBSD-i386-3.0.3.tgz) = e7e43bd175bc56f25aa727f917686c24271f255e
+RMD160 (sbcl-NetBSD-i386-3.0.3.tgz) = fbefaa572a80cf016d61dbc737b6eed11b9f758e
+Size (sbcl-NetBSD-i386-3.0.3.tgz) = 9474559 bytes
+SHA1 (sbcl-NetBSD-i386-4.0.tgz) = 47edaac902e435ef7678a84837586fd243d2ea0a
+RMD160 (sbcl-NetBSD-i386-4.0.tgz) = 5f4ccc3075a42f3801db458ca157e38f83f005a1
+Size (sbcl-NetBSD-i386-4.0.tgz) = 9334199 bytes
+SHA1 (sbcl-NetBSD-i386-4.0_STABLE.tgz) = 47edaac902e435ef7678a84837586fd243d2ea0a
+RMD160 (sbcl-NetBSD-i386-4.0_STABLE.tgz) = 5f4ccc3075a42f3801db458ca157e38f83f005a1
+Size (sbcl-NetBSD-i386-4.0_STABLE.tgz) = 9334199 bytes
 SHA1 (patch-aa) = 8f1c02fc96233af1063ca8dd62bc6033eb435db2
 SHA1 (patch-ab) = 5b3e831bae400f4d61b0144d7812864a8d5e6c86
 SHA1 (patch-ac) = bce87555a5944cfeb25c65df9d41c3f49b5d4866
